--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.1",
     "swagger-ui-express": "^4.3.0",
     "tsc": "^2.0.4"
   },
@@ -26,6 +28,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/mongoose": "^5.11.97",
     "@types/swagger-ui-express": "^4.1.3",
     "cross-env": "^7.0.3",
     "ts-node-dev": "^1.1.8",
